--- a/src/components/Hotels/Hotels.css
+++ b/src/components/Hotels/Hotels.css
@@ -1,33 +1,40 @@
+.r-container{
+    overflow: hidden;
+    position: relative;
+}
+
 .r-head{
     margin-bottom: 2rem;
 }
 
-.r-card{
-    gap: 0.6rem;
-    padding: 1rem;
-    border-radius: 10px;
-    max-width: max-content;
-    margin: auto;
-    transition: all 300ms ease-in;
+
+
+.swiper-horizontal{
+    overflow: visible;
 }
-.r-card>img{
-    width: 100%;
-    max-width: 15rem;
+.r-button{
+    position: absolute;
+    gap: 1rem;
+    top: -4rem;
+    right: 0;
 }
 
-.r-card>:nth-child(2)
-{
+.r-button button{
     font-size: 1.2rem;
-    font-weight: 600;
+    padding: 0.2rem 0.8rem;
+    color: blue;
+    border: none;
+    border-radius: 5px;
+    background-color: white;
+    cursor: pointer;
 }
 
-.r-card>:nth-child(3)
+.r-button>:nth-child(1)
 {
-    font-size: 1.5rem;
+    background-color: #EEEEFF;
+}
+.r-button>:nth-child(2)
+{
+    box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.25);
 }
 
-.r-card>:nth-child(4)
-{
-    font-size: 0.7rem;
-    width: 15rem;
-}
